--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>JULIA TKALYCH</h1>
     <h2>BIO</h2>
     <P>hello there</P>
-    
+    <h6>this is the best website of all time</h6>
+<img src="https://i5.walmartimages.ca/images/Large/083/646/6000198083646.jpg" alt="">
 </body>
 </html>
