added second picture

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h6>this is the best website of all time</h6>
 
 <img src="https://i5.walmartimages.ca/images/Large/083/646/6000198083646.jpg" alt="">
-
+<img src="https://cdn.iflscience.com/images/53a4292d-6958-54e4-b83a-fe9532d19324/default-1521728554-cover-image.jpg" alt="">
 </body>
 </html>
