--- a/index.html
+++ b/index.html
@@ -2,17 +2,114 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Appetizer/Entree/Dessert</title>
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&display=swap" rel="stylesheet">
+<style>
+    .text-emphasis {font-weight: 700;}
+body{
+    font-family: 'Cinzel', serif;
+    color: rgb(46, 109, 106);
+}
+
+ul {
+    background-color: black;
+    display: block;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(34, 3, 3);
+}
+
+
+li {
+  float: left;
+
+}
+
+li a {
+  display: block;
+  color: plum;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: double;
+}
+
+li a:hover {
+  background-color: rgb(179, 46, 46);
+}
+aside {background-color: rgb(rgb(53, 13, 13))}
+h2 {
+    font-family: 'Noto Serif', serif;
+}
+p {background-color: rgb(209, 192, 145);
+font-family: 'Noto Serif', serif;
+text-emphasis: bold;
+padding: 14px 18px;
+
+
+}
+img {width: 100%;
+height: 100%}
+
+.column {
+  max-width: 30%;
+  padding: 8px;
+}
+.row {
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
+
+</style>
 </head>
 <body>
-    <h1>JULIA TKALYCH</h1>
-    <h2>BIO</h2>
-    <P>hello there</P>
-    <h6>this is the best website of all time</h6>
+    
+<ul>
+    <li><a class="active" href="appetizer.html">Appetizer</a></li>
+    <li><a href="#entree.html">Entree</a></li>
+    <li><a href="#Dessert.html">Dessert</a></li>
+    <li><a href="#Background.html">background</a></li>
+    <li><a href="#contact us.html">Contact Us</a></li>
+    <li><a href="#classes.html">Classes</a></li>
 
-<img src="https://i5.walmartimages.ca/images/Large/083/646/6000198083646.jpg" alt="">
-<img src="https://cdn.iflscience.com/images/53a4292d-6958-54e4-b83a-fe9532d19324/default-1521728554-cover-image.jpg" alt="">
+  </ul>
+  <p>Where culinary arts meets simplicity.</p>
+  
+  <aside>
+    <p>We are a local resturaunt, which specializing in farm to table preperation. 
+    We encourage you to enjoy the food as a night out, howvever we also offer classes taught by our head chefs so you can create and learn from home.
+    </p>
+    <div class="row">
+            <div class="column">
+              <img src="https://img.grouponcdn.com/iam/9j1ST6cdPwscYgYXXyg8/zv-5273x3515/v1/c700x420.jpg" alt="Snow">
+            </div>
+            <div class="column">
+              <img src="https://i.cbc.ca/1.4491288.1516208229!/fileImage/httpImage/image.jpg_gen/derivatives/16x9_780/cowboysteak.jpg" alt="Forest">
+            </div>
+            <div class="column">
+              <img src="https://i.pinimg.com/originals/4e/45/5e/4e455edb15a2996cea28f7cd36e9224e.jpg" alt="Mountains">
+            </div>
+          </div>
+
+ 
+  <H2>  <div background-color="black"></div>
+      <font-family></font-family>
+    
+
+  
+
 </body>
 </html>
